--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,6 @@
   }
 
   .btn {
-    @apply bg-[#f8f9fa] p-3 rounded-sm text-sm text-gray-800 hover:ring-1 hover:ring-gray-200 hover:shadow-md focus:outline-none active:ring-gray-300;
+    @apply bg-[#f8f9fa] px-4 py-2 rounded-sm text-sm text-gray-800 hover:ring-1 hover:ring-gray-200 hover:shadow-md focus:outline-none active:ring-gray-300;
   }
 }
